--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:match*",
-      "destination": "https://portfolio-team-scian.vercel.app/:match*"
+      "destination": "https://portfolio-team-scian.vercel.app/api/:match*"
     }
   ]
 }
