--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,24 @@
 {
   "rewrites": [
     {
-      "source": "/api/:match*",
-      "destination": "https://portfolio-team-scian.vercel.app/api/:match*"
+      "source": "/api/reddit/(.*)",
+      "destination": "https://www.reddit.com/$1"
+    },
+    {
+      "source": "/api/solvedac/(.*)",
+      "destination": "https://solved.ac/$1"
+    },
+    {
+      "source": "/api/boj/(.*)", 
+      "destination": "https://www.acmicpc.net/$1"
+    },
+    {
+      "source": "/api/stackexchange/(.*)",
+      "destination": "https://api.stackexchange.com/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ]
 }
