--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.476.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-scroll": "^1.9.3",
     "react-simple-typewriter": "^5.0.1",
     "tailwind-merge": "^3.0.2",
