--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-simple-typewriter": "^5.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.6",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "vite-plugin-radar": "^0.10.1"
   },
   "devDependencies": {
     "@tanstack/eslint-config": "^0.1.0",
